--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,5 +12,8 @@
 @import 'base/variables';
 @import 'blocks/titles';
 @import 'blocks/buttons';
-@import 'blocks/promo';
 @import 'blocks/logo';
+@import 'blocks/promo';
+@import 'blocks/bloob';
+@import 'blocks/services';
+
