--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,5 +16,6 @@
 @import 'blocks/promo';
 @import 'blocks/bloob';
 @import 'blocks/services';
-@import 'blocks/illustration'
+@import 'blocks/illustration';
+@import 'blocks/testimonial';
 
