Added modifications to styles files

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
     padding-top: 57px;
-    background: url(../../icons/bloobs/header_bloob.png) right no-repeat;
+    background: url(../icons/bloobs/header_bloob.png) right no-repeat;
     .header {
         display: flex;
         align-items: center;
