--- a/src/sass/blocks/_testimonial.scss
+++ b/src/sass/blocks/_testimonial.scss
@@ -7,6 +7,9 @@
     }
     &__person {
         max-width: 420px;
+        &:hover {
+            filter: drop-shadow(0 -6mm 4mm #56597a);
+        }
     }
     &__description {
         max-width: 510px;
