--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,6 @@
 @import 'blocks/services';
 @import 'blocks/illustration';
 @import 'blocks/testimonial';
-
+@import 'blocks/partners';
+@import 'blocks/blog';
+@import 'blocks/footer';
