--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/titles';
 @import 'blocks/buttons';
 @import 'blocks/logo';
+@import 'blocks/menu';
 @import 'blocks/promo';
 @import 'blocks/bloob';
 @import 'blocks/services';
