Changed paddings in the project

--- a/src/sass/blocks/_blog.scss
+++ b/src/sass/blocks/_blog.scss
@@ -1,5 +1,5 @@
 .blog {
-    padding-bottom: 150px;
+    padding: 47px 0px 75px 0px;
     &__wrapper {
         display: flex;
         column-gap: 85px;
