--- a/src/sass/blocks/_testimonial.scss
+++ b/src/sass/blocks/_testimonial.scss
@@ -1,5 +1,5 @@
 .testimonial {
-    padding-bottom: 163px;
+    padding: 100px 0px 81px 0px;
     &__wrapper {
         display: flex;
         justify-content: space-between;
