--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    padding-top: 75px;
     background-image: url(../icons/bloobs/footer_bloob.png);
     background-repeat: no-repeat;
     background-size: 100%;
