--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,5 +1,5 @@
 .promo {
-    padding-top: 57px;
+    padding: 57px 0px 90px 0px;
     background: url(../icons/bloobs/header_bloob.png) right no-repeat;
     .header {
         display: flex;
