Changed a position of some blocks

--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -2,6 +2,7 @@
     padding-top: 75px;
     background-image: url(../icons/bloobs/footer_bloob.png);
     background-repeat: no-repeat;
+    background-position: bottom;
     background-size: 100%;
     &__wrapper {
         padding-top: 25px;
