Added adaptability for tablets and laptops

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,3 +22,12 @@
 @import 'blocks/partners';
 @import 'blocks/blog';
 @import 'blocks/footer';
+
+//Media import
+@import 'media/bloob.media';
+@import 'media/titles.media';
+@import 'media/promo.media';
+@import 'media/illustration.media';
+@import 'media/testimonial.media';
+@import 'media/partners.media';
+@import 'media/blog.media';
