--- a/src/sass/media/_bloob.media.scss
+++ b/src/sass/media/_bloob.media.scss
@@ -11,3 +11,11 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .bloob {
+        &-header {
+            display: none;
+        }
+    }
+}
