--- a/src/sass/media/_titles.media.scss
+++ b/src/sass/media/_titles.media.scss
@@ -15,3 +15,12 @@
         font-size: 18px;
     }
 }
+
+@media (max-width: 768px) {
+    .description {
+        font-size: 18px;
+        &__blog {
+            max-width: 400px;
+        }
+    }
+}
