--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -20,7 +20,7 @@
     line-height: 40px;
     margin-bottom: 15px;
     color: $main-color;
-    &_center {
+    &__services {
         text-align: center;
     }
     &__teamwork {
