--- a/src/sass/media/_promo.media.scss
+++ b/src/sass/media/_promo.media.scss
@@ -38,3 +38,24 @@
         }
     }
 }
+
+@media (max-width: 576px) {
+    .promo {
+        padding: 30px 0px 60px 0px;
+        &__wrapper {
+            display: block;
+            margin-top: 90px;
+        }
+        &__block {
+            display: block;
+        }
+        &__divider {
+            margin-bottom: 10px;
+        }
+        &__info {
+            a {
+                display: none;
+            }
+        }
+    }
+}
