--- a/src/sass/media/_services.media.scss
+++ b/src/sass/media/_services.media.scss
@@ -3,3 +3,12 @@
         padding: 70px 0px 74px 0px;
     }
 }
+
+@media (max-width: 576px) {
+    .services {
+        padding: 60px 0 64px 0;
+        &__cards {
+            margin-top: 30px;
+        }
+    }
+}
