--- a/src/sass/media/_testimonial.media.scss
+++ b/src/sass/media/_testimonial.media.scss
@@ -21,3 +21,12 @@
         padding: 80px 0px 60px 0px;
     }
 }
+
+@media (max-width: 576px) {
+    .testimonial {
+        padding: 60px 0px;
+        &__wrapper {
+            display: block;
+        }
+    }
+}
