--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 }
 
 @import 'base/variables';
+@import 'base/modal';
 @import 'blocks/titles';
 @import 'blocks/buttons';
 @import 'blocks/logo';
