--- a/src/sass/media/_titles.media.scss
+++ b/src/sass/media/_titles.media.scss
@@ -50,5 +50,8 @@
             text-align: center;
             margin-bottom: 30px;
         }
+        &__testimonial {
+            text-align: center;
+        }
     }
 }
