--- a/src/sass/media/_blog.media.scss
+++ b/src/sass/media/_blog.media.scss
@@ -1,5 +1,9 @@
 @media (max-width: 992px) {
     .blog {
+        padding: 50px 0 50px 0;
+        &__wrapper {
+            column-gap: 5px;
+        }
         &__form-wrapper {
             max-width: 680px;
         }
