--- a/src/sass/media/_promo.media.scss
+++ b/src/sass/media/_promo.media.scss
@@ -14,13 +14,18 @@
 
 @media (max-width: 992px) {
     .promo {
+        padding: 30px 0 90px 0;
         .header {
+            padding: 0px 20px;
             &__link {
                 font-size: 16px;
             }
         }
         &__header {
             font-size: 50px;
+        }
+        &__info {
+            padding-left: 20px;
         }
     }
 }
@@ -44,7 +49,11 @@
         padding: 30px 0px 60px 0px;
         &__wrapper {
             display: block;
-            margin-top: 90px;
+            margin-top: 75px;
+        }
+        &__img {
+            margin: 30px auto 0px;
+            width: 90%;
         }
         &__block {
             display: block;
